--- a/src/components/styles/home.css
+++ b/src/components/styles/home.css
@@ -1,1 +1,3 @@
-
+.content-area-wrapper {
+    /* scrollbar-gutter: stable; */
+}
